form now submitted to correct week from cohort, form not visible if submitted already this week or not been assigned a cohort id

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,14 @@ html, body {
   margin: 0 auto;
 }
 
+#show-form {
+  display: block;
+}
+
+#no-show-form {
+  display: none;
+  width: 5000px;
+}
 
 /*****    START OF NAV    *****/
 #nav-ul {
